Make CreateShelf a long-running operation
